Removes truncation and fixes translation and box

--- a/ckanext/ontario_theme/fanstatic/common.css
+++ b/ckanext/ontario_theme/fanstatic/common.css
@@ -2425,6 +2425,14 @@ li.media-item.ministry-item {
   padding: 15px;
 }
 
+.new-alert.alert-huge > p {
+  margin-bottom: 0;
+}
+
+.new-alert.alert-huge {
+  padding-bottom: 40px;
+}
+
 /* ========================================================================   
   Homepage - Topics
   ======================================================================== */
@@ -2792,7 +2800,6 @@ label::after {
   background-color: #d1d1d1;
 }
 
-
 .nav-facet .nav-item.active > a {
   color: #fff;
 }
@@ -2801,6 +2808,15 @@ label::after {
   background-color: #00478f;
 }
 
+.nav-item.active > a span,
+.nav-aside li.active a span {
+  white-space: normal;
+}
+
+.nav-item.active > a::before,
+.nav-aside li.active a::before {
+  height: unset;
+}
 
 .nav-facet.nav-simple > li {
   border-bottom: none;
